--- a/package.json
+++ b/package.json
@@ -1,7 +1,27 @@
 {
-  "name": "my-storybook",
+  "name": "srt-my-storybook-components",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "license": "MIT",
+  "typings": "dist/index.d.ts",
+  "main": "dist/index.js",
+  "repository": {
+    "url": "https://github.com/t0uu/sb-components.git",
+    "type": "git"
+  },
+  "peerDependencies": {
+    "react": ">=16",
+    "typescript": ">=4.0.0"
+  },
+  "release": {
+    "branches": [
+      "main"
+    ]
+  },
+  "files": [
+    "dist",
+    "src"
+  ],
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -9,19 +29,21 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.12",
     "@types/react-dom": "^18.0.11",
-    "react": "^18.2.0",
+    "copyfiles": "^2.4.1",
+    "react": ">=16",
     "react-dom": "^18.2.0",
-    "typescript": "^4.9.5",
+    "rimraf": "^4.1.2",
+    "typescript": ">=4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "start-storybook -p 6006",
-    "build": "build-storybook",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "build": "npm run clean && tsc && npm run copy-files",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "chromatic": "npx chromatic --project-token=94c49ea40858"
+    "chromatic": "npx chromatic --project-token=94c49ea40858",
+    "clean": "rimraf dist/",
+    "copy-files": "copyfiles -u 1 src/**/*.css dist/"
   },
   "eslintConfig": {
     "extends": [
@@ -55,8 +77,17 @@
     "babel-loader": "^8.3.0",
     "chromatic": "^6.17.0",
     "css-loader": "^6.7.3",
-    "postcss": "^8.4.21"
+    "postcss": "^8.4.21",
+    "semantic-release": "^20.1.0"
   },
+  "plugins": [
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/changelog",
+    "@semantic-release/github",
+    "@semantic-release/npm",
+    "@semantic-release/git"
+],
   "readme": "ERROR: No README data found!",
   "_id": "my-storybook@0.1.0"
 }
